--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "types": ["node"],           
+    "declaration": true,         
+    "removeComments": true       
   }
 }
