--- a/apps/api-gateway/Dockerfile
+++ b/apps/api-gateway/Dockerfile
@@ -3,10 +3,16 @@ FROM node:20-alpine
 WORKDIR /app
 
 COPY package*.json ./
+COPY tsconfig*.json ./
+COPY nest-cli.json ./
+
 RUN npm install
 
 COPY . .
 
-RUN npm run build
+RUN npm run build:api-gateway
 
-CMD ["node", "dist/apps/api-gateway/main.js"]
+EXPOSE 3000
+
+CMD ["node", "dist/apps/api-gateway/apps/api-gateway/src/main.js"]
+
