--- a/apps/api-gateway/tsconfig.json
+++ b/apps/api-gateway/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/apps/order-service"
+    "outDir": "../../dist/apps/api-gateway"
   },
   "include": [
     "src/**/*",
