fix(build): align Dockerfiles and tsconfig setup across microservices to ensure correct NestJS build output paths and shared libs compilation

--- a/apps/payment-service/Dockerfile
+++ b/apps/payment-service/Dockerfile
@@ -3,17 +3,16 @@ FROM node:20-alpine
 WORKDIR /app
 
 COPY package*.json ./
-COPY tsconfig*.json ./
 COPY nest-cli.json ./
+COPY tsconfig*.json ./
+
+COPY apps ./apps
+COPY libs ./libs
 
 RUN npm install
-
-COPY . .
-
 RUN npm run build:payment-service
 
 WORKDIR /app/apps/payment-service
 
 EXPOSE 3002
-
-CMD ["sh", "-c", "npx prisma migrate deploy && node /app/dist/apps/payment-service/src/main.js"]
+CMD ["sh", "-c", "npx prisma migrate deploy && node /app/dist/apps/payment-service/apps/payment-service/src/main.js"]
