--- a/apps/order-service/Dockerfile
+++ b/apps/order-service/Dockerfile
@@ -3,18 +3,16 @@ FROM node:20-alpine
 WORKDIR /app
 
 COPY package*.json ./
-COPY tsconfig*.json ./
 COPY nest-cli.json ./
+COPY tsconfig*.json ./
+
+COPY apps ./apps
+COPY libs ./libs
 
 RUN npm install
-
-COPY . .
-
 RUN npm run build:order-service
 
 WORKDIR /app/apps/order-service
 
 EXPOSE 3001
-
-CMD ["sh", "-c", "npx prisma migrate deploy && node /app/dist/apps/order-service/src/main.js"]
-
+CMD ["sh", "-c", "npx prisma migrate deploy && node /app/dist/apps/order-service/apps/order-service/src/main.js"]
