--- a/apps/payment-service/tsconfig.build.json
+++ b/apps/payment-service/tsconfig.build.json
@@ -1,4 +1,12 @@
 {
-  "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "rootDir": "../../",
+    "outDir": "../../dist/apps/payment-service"
+  },
+  "include": [
+    "src/**/*",
+    "../../libs/**/*"
+  ],
+  "exclude": ["node_modules", "dist", "**/*.spec.ts"]
 }
