--- a/apps/payment-service/tsconfig.json
+++ b/apps/payment-service/tsconfig.json
@@ -1,9 +1,6 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {},
-  "include": [
-    "src/**/*",
-    "../../libs/**/*"
-  ],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
