--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:api-gateway": "nest build api-gateway",
     "build:order-service": "nest build order-service",
     "build:payment-service": "nest build payment-service",
-    "build": "nest build",
+    "build:libs": "nest build messaging",
+    "build": "npm run build:libs && npm run build:api-gateway && npm run build:order-service && npm run build:payment-service",
     
     "start:dev": "concurrently \"npm run start:api-gateway:dev\" \"npm run start:order:dev\" \"npm run start:payment:dev\"",
     
